# hospitality-data-mlops-reference-platform

./: .env.example  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  Makefile  PROJECTS.md  README.md  RELEASE_NOTES.md  SECURITY.md  START_HERE.md  V2_AI_OPERATIONS.md  docker-compose.yml  pyproject.toml  requirements-databricks.txt  requirements-dev.txt  requirements.txt
.github/: README.md  dependabot.yml  pull_request_template.md
.github/workflows/: ai-ops-ci.yml  ci.yml  codeql.yml  debug-test-suite.yml  deploy-azure-demo.yml  deploy-azure-validation.yml  quality.yml  release-image.yml
artifacts/: README.md  VALIDATION_POLICY.md
benchmarks/lakehouse_scale/: README.md  __init__.py  benchmark.py
components/: README.md
components/01_lakehouse_foundation/: README.md
components/02_tour_and_contract_funnel/: README.md
components/03_member_points_and_churn/: README.md
components/04_waterfall_forecasting/: README.md
components/05_resort_labor_efficiency/: README.md
components/06_production_mlops/: README.md
data/: GENERATION_POLICY.md  README.md
databricks/: README.md  databricks.yml
databricks/resources/: jobs.yml  rollback.yml
databricks/src_databricks/: batch_score.py  build_member_features.py  build_waterfall_features.py  common.py  monitor.py  promote_waterfall.py  rollback_waterfall.py  train_waterfall.py
docs/: AI_OPERATIONS_CONTROL_PLANE.md  ARCHITECTURE.md  CAPABILITY_MATRIX.md  CAPACITY_AND_LOAD_PLAN.md  CHANGE_SCOPE_GUIDE.md  COMMIT_MESSAGE_STANDARD.md  COST_CONTROL.md  CREDENTIAL_SETUP.md  DATA_CONTRACTS.md  DATA_DICTIONARY.md  DEPLOYMENT.md  EXECUTIVE_DEMO.md  EXECUTIVE_OVERVIEW.md  HISTORY_NOTE.md  IMPLEMENTATION_EVIDENCE.md  INCIDENT_RESPONSE.md  INTERVIEW_DEMO.md  JD_ALIGNMENT.md  ML_EVALUATION_LIMITATIONS.md  MODEL_CARD.md  MODEL_GOVERNANCE.md  OPERATIONS_RUNBOOK.md  PERFORMANCE_VALIDATION.md  PRINCIPAL_ENGINEER_ALIGNMENT.md  PRODUCTION_READINESS.md  PRODUCTION_SYSTEM_DESIGN.md  README.md  REPOSITORY_REVIEW_GUIDE.md  SCALABILITY_STRATEGY.md  SECURITY_GOVERNANCE.md  SERVING_VALIDATION.md  SLO_SLA.md  SYSTEM_COMPONENTS.md  SYSTEM_VALIDATION.md  SYSTEM_VALIDATION_WALKTHROUGH.md  TECHNICAL_SHOWCASE.md  THREAT_MODEL.md
docs/adr/: 0001-batch-first-inference.md  0002-point-in-time-features.md  0003-last-successful-publication.md
examples/: README.md
examples/sample_data/: labor_shifts_sample.csv  members_sample.csv  points_transactions_sample.csv  reservations_sample.csv  tour_events_sample.csv
examples/sample_outputs/: data_quality_results.csv  member_month_features_sample.csv  validation_summary.json  (+1 more)
k8s/: README.md  deployment.yaml  hpa.yaml  kustomization.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
loadtest/: README.md  locustfile.py
scripts/: README.md  benchmark_serving.py  clean_outputs.py  deploy_azure_container_app.sh  export_examples.py  run_ai_ops_demo.py  run_all.py  run_backtests.py  run_executive_demo.py  run_local_executive_demo.py  run_local_system_validation.py  run_system_validation.py  smoke_test_serving.py
sql/: README.md
src/: README.md
tests/: README.md  test_ai_ops.py  test_api.py  test_backtesting.py  test_examples.py  test_executive_demo_assets.py  test_features_and_models.py  test_pipeline.py  test_production_assets.py  test_public_release_safety.py  test_runtime_config.py  test_scale_benchmark.py  test_system_validation_assets.py
(+33 files in other folders)
