[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hospitality-data-mlops-platform"
version = "1.1.0"
description = "Production-style hospitality data and MLOps reference platform"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "fastapi>=0.115",
  "pydantic>=2.8"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
