[build-system]
requires = ["setuptools==80.9.0", "wheel==0.46.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hospitality-data-mlops-platform"
version = "1.1.0"
description = "Production-style hospitality data and MLOps reference platform"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [{ name = "Kellon Lewis" }]
dependencies = [
  "pandas==2.2.3",
  "numpy==2.3.5",
  "scikit-learn==1.8.0",
  "joblib==1.5.3",
  "fastapi==0.139.2",
  "starlette==1.3.1",
  "uvicorn==0.48.0",
  "pydantic==2.13.4",
  "PyYAML==6.0.3"
]

[project.urls]
Repository = "https://github.com/mrdata355/hospitality-data-mlops-reference-platform"
Documentation = "https://github.com/mrdata355/hospitality-data-mlops-reference-platform#readme"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
