[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hospitality-data-mlops-platform"
version = "1.1.0"
description = "Production-style hospitality data and MLOps reference platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kellon Lewis" }]
dependencies = [
  "pandas==2.2.3",
  "numpy==2.3.5",
  "scikit-learn==1.8.0",
  "joblib==1.5.3",
  "fastapi==0.139.2",
  "pydantic==2.13.4"
]

[project.urls]
Repository = "https://github.com/mrdata355/hospitality-data-mlops-reference-platform"
Documentation = "https://github.com/mrdata355/hospitality-data-mlops-reference-platform#readme"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["src/hospitality_data_platform"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"databricks/src_databricks/*.py" = ["F821"]
"sql/databricks/01_bronze_autoloader.py" = ["F821"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
